2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/setup/links.php: Fixed blank names creating & updating links

	Fixes: #3371409

2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/setup/os.php: Fixed blank names in OS names

	Fixes: #3371409

2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/reporting/visual_console_builder.php: Fixed blank names in
	maps in visual console builder

	Fixes: #3371409

2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed blank names in reports

	Fixes: #3371409

2011-08-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Improved css style in installer.	

2011-08-04  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql,
	  extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added two indexes to the
	  database schema to improve queries on talert_template_modules and
	  tserver_export. Thanks to Manuel Arostegui.

2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/modules/manage_nc_groups.php: Fixed creating & updating
	component gruops with blank names

	Fixes: #3384668

2011-08-02 Javier Lanz <javier.lanz@artica.es>

	* images/skin/skin_default/include/styles/pandora.css: Removed old
	links to non-existing images

2011-08-02 Javier Lanz <javier.lanz@artica.es>

	* extensions/agents_modules.php: Changed background color of the text
	in the table header.

	Fixes: 3373927

2011-07-29  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Change the events free search tag
	by a combo with all the possible tags for 3380040

2011-07-29  Sergio Martin <sergio.martin@artica.es>

	* operation/servers/view_server_detail.php: Changed the progress graph
	mode to show the percent text and not only graph. For bug 3379759

2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/groups/group_list.php: Fixed a bug that allow
	to delete all agent groups and makes pandora unstable. 
