@@ -1,3 +1,10 @@
+2011-08-05 Javier Lanz <javier.lanz@artica.es>
+
+	* godmode/tag/edit_tag.php: Fixed blank names creating & updating
+	tags
+
+	Fixes: #3371409
+
 2011-08-04 Javier Lanz <javier.lanz@artica.es>
 
 	* godmode/setup/links.php: Fixed blank names creating & updating links
